deploy/k8s/test-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - webapp
              topologyKey: kubernetes.io/hostname
      containers:
        - name: test-v1-tomatols
          image: gcr.io/java-dev-kubernetes/test-docker:latest
          resources:
            limits:
              cpu: 300m
              memory: 1000Mi
            requests:
              cpu: 300m
              memory: 1000Mi
          ports:
            - name: service-port
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /healthz
              port: service-port
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: service-port
            initialDelaySeconds: 30
            periodSeconds: 5
          command: ["/bin/sh","-c","java $JAVA_OPTS -jar /app.jar"]
