deploy/k8s/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 8081
  type: NodePort
